@@ -1,3 +1,10 @@
+2015-05-10  Christian Groessler  <chris@groessler.org>
+* atari_x11.c (PLATFORM_Initialise): Preinitialize image_data buffer to
+  shut off valgrind warnings.
+* devices.c: Fix for bug #43: Prevent double close of entry in h_fp[]
+  array.
+
+
 2015-04-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
 * antic.c: Fix an infinite recursion with enabled NEW_CYCLE_EXACT, disabled
   PAGED_ATTRIB, when the ANTIC display list is pointed to GTIA registers. The
